# django-base-accounts

./: README.md  pyproject.toml
base_accounts/: apps.py  managers.py  models.py
